<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/LinearLayout.Base">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingLeft="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_unpaid_phone"/>

            <TextView
                android:id="@+id/unpaid_amount"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="36sp"
                android:textColor="#FA0608"
                tools:text="$56.60"/>
            
            <TextView
                android:id="@+id/unpaid_sub_title"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="35dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#2C3225"
                tools:text="@string/unpaid_subtitle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/list_item_divider"/>

        </LinearLayout>

        <TextView
            style="@style/RATextView.MontserratLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label_payment_method"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_add_payment">

            <ImageView
                android:id="@+id/icon_payment_type"
                android:layout_width="32dp"
                android:layout_height="22dp"
                android:layout_marginStart="24dp"
                tools:src="@drawable/icn_visa" />

            <TextView
                android:id="@+id/text_payment_card"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#2C3225"
                android:textSize="12sp"
                tools:text="Personal **** 4422" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Button.RoundedBlueButton"
            android:layout_marginTop="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="45dp"
            android:text="@string/btn_submit"/>


    </LinearLayout>

</layout>
