...
    <string name="ut">University of Texas</string>

    <!--MainMapFragment-->
    <string name="requesting">Requesting&#8230;</string>
    <string name="enter_pickup_address">Enter pickup</string>
    <string name="enter_destination_address">Enter destination</string>
    <string name="set_pickup_location">Set Pickup location</string>
    <string name="minutes">MIN</string>
    <string name="error_places_autocomplete">Unable to fetch address. Please contact support</string>
    <string name="oops">OOPS</string>
    <string name="no_available_cars">Set Pickup location</string>
    <string name="coming_soon_in_your_area">Coming soon in your area</string>

...
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="legal">Legal</string>
    <string name="sign_out">Sign out</string>

    <!--Payment fragment-->
    <string name="title_payment">Payment</string>
    <string name="title_payment_add">Add Payment</string>
    <string name="title_payment_edit">Edit Payment</string>
    <string name="title_payment_history">Payment History</string>
    <string name="label_payment_methods">Payment Methods</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="promo_payment_get_free_rides">Get Free Rides!</string>
...
    <string name="work">Work</string>
    <string name="favorites">Favorite Places</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="your_place">Your place</string>

    <!--UT-->
    <string name="pay_with_bevobucks">Pay with BevoBucks</string>
    <string name="bevo_payment_failed_msg">We are unable to complete payment due to unexpected error. Please see Unpaid Balance in Payments and make payment with BevoBucks</string>
    <string name="bevo_split_fare_disabled">Split fare is currently not available to use with Bevo Bucks</string>

    <!-- Unpaid -->
    <string name="unpaid_title">Unpaid balance</string>
    <string name="unpaid_subtitle">You need to pay your balance to be able to take another trip</string>
    <string name="unpaid_warning">You have unpaid rides</string>

    <string name="foreground_service_in_ride">You are in ride</string>
    <string name="credits_title">Credits</string>

...
